Draft home page done

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,6 +10,7 @@
   --font-heading: "Orelega One", serif;
   --font-body: "Montserrat", "sans-serif";
   --color-brand-purple: #8603bb;
+  --color-brand-gold: #ffd700;
 }
 
 /* html,
