--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -200,6 +200,10 @@ body {
   view-transition-name: post-image;
 }
 
+.partner img {
+  contain: layout;
+}
+
 .partner a.transitioning img {
   view-transition-name: partner-image;
 }
@@ -221,6 +225,7 @@ body {
 }
 
 .partner-detail img {
+  contain: layout;
   view-transition-name: partner-image;
 }
 
@@ -232,27 +237,37 @@ body {
   view-transition-name: partner-btn;
 }
 
-::view-transition-old(partner-image),
+/* ::view-transition-old(partner-image),
 ::view-transition-new(partner-image) {
   height: 100%;
-  /* object-fit: none;
-  overflow: clip; */
-  width: auto;
-}
-
-::view-transition-group(partner-image) {
+  animation: none;
+  mix-blend-mode: normal;
   overflow: clip;
+
+  
+} */
+
+/* ::view-transition-old(partner-image) {
+  object-fit: contain;
 }
 
-::view-transition-old(partner-btn),
+::view-transition-new(partner-image) {
+  object-fit: cover;
+} */
+
+/* ::view-transition-group(partner-image) {
+  overflow: clip;
+} */
+
+/* ::view-transition-old(partner-btn),
 ::view-transition-new(partner-btn) {
   height: 100%;
   width: auto;
-}
+} */
 
-::view-transition-group(partner-btn) {
+/* ::view-transition-group(partner-btn) {
   overflow: clip;
-}
+} */
 
 @keyframes reveal {
   from {
